Agregado de Flask al proyecto

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,6 @@ version = "1.0.0"
 description = "Sistema Web para control de inscripciones y elementos del Centro Cultural Don Bosco"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "flask>=3.1.2",
+]
