--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Clave secreta de Flask
 SECRET_KEY=mi_clave_secreta_super_secreta
 
-# Credenciales de la base de datos Oracle
-ORACLE_USER=ccdb
-ORACLE_PASSWORD=password
-ORACLE_HOST=localhost
-ORACLE_PORT=1521
-ORACLE_SERVICE_NAME=XE
+# Credenciales de la base de datos
+DB_USER=myuser
+DB_PASSWORD=mypassword
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=ccdb
 
 # Configuración del puerto de la aplicación Flask
 FLASK_RUN_PORT=5000
