--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,23 +1,21 @@
 services:
   db:
-    image: gvenzl/oracle-free:23-full-faststart
+    image: postgres:18-alpine
     container_name: ccdb
+    restart: always
+    shm_size: 128mb
     environment:
-      # Admin user password
-      ORACLE_PASSWORD: adminpassword
       # Application user and password
-      APP_USER: myuser
-      APP_USER_PASSWORD: mypassword
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
       # Database service name
-      ORACLE_DATABASE: XE
+      POSTGRES_DB: ccdb
     volumes:
       # Persist data
-      - data:/opt/oracle/oradata
-      # Save seed data here
-      - ./seed:/opt/oracle/seed:Z,ro
-      # Run init scripts
-      - ./scripts:/container-entrypoint-initdb.d/Z,ro
+      - data:/var/lib/postgresql/data
+      # Database initialization scripts
+      - ./seeds:/docker-entrypoint-initdb.d:Z,ro
     ports:
-      - "1521:1521"
+      - 5432:5432
 volumes:
   data:
